--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
   "author": "https://twitter.com/nelsonic",
   "version": "1.0.0",
   "devDependencies": {
-    "jshint": "^2.8.0"
+    "istanbul": "^0.4.3",
+    "jshint": "^2.8.0",
+    "qunit-tap": "^1.5.0",
+    "qunitjs": "^2.0.0"
   },
   "scripts": {
-    "test": "./node_modules/jshint/bin/jshint hello.js"
+    "test": "./node_modules/jshint/bin/jshint hello.js",
+    "coverage": "istanbul cover ./test.js"
+  },
+  "dependencies": {
+    "hapi": "^13.4.1",
+    "inert": "^4.0.0",
+    "nodemon": "^1.9.2"
   }
 }
